--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -23,3 +23,6 @@ setup_target(lab1-1)
 setup_target(lab1-2)
 setup_target(lab2-1)
 setup_target(lab2-2)
+setup_target(lab3-1)
+setup_target(lab3-2)
+setup_target(lab4)
